--- a/P000684.opf/meta.yml
+++ b/P000684.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P000684
+id: P000684
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W29978
   title: རྩིས་གཞུང
-  volume: ''
   author: ''
+  volumes: ''
