--- a/P000684.opf/layers/v001/Pagination.yml
+++ b/P000684.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9ff3b038a6774a979c1cbad50e9e3530
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   58ef190ca2ab49d59140b0cad4b1093e:
