--- a/P000684.opf/layers/v002/Pagination.yml
+++ b/P000684.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 7ceb12df9e2e4b5a90df4406361d4d89
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7e56aac7646c441ab91032ce4ca914f3:
