--- a/P000684.opf/meta.yml
+++ b/P000684.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000684
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 16:36:57.586768
 source_metadata:
   id: bdr:W29978
   title: རྩིས་གཞུང
@@ -19,3 +19,5 @@ source_metadata:
       volume_number: 2
       total_pages: 564
       base_file: v002.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
